--- a/scss/site.scss
+++ b/scss/site.scss
@@ -70,6 +70,12 @@ header#top {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    @media (max-width: $breakpoint-mobile) {
+      display: none;
+      &.display-block {
+        display: block;
+      }
+    }
     a {
       padding: 1rem 0.5rem;
       font-size: 0.9em;
@@ -78,6 +84,14 @@ header#top {
       @media (max-width: $breakpoint-mobile) {
         display: block;
       }
+    }
+  }
+  button {
+    display: none;
+    @media (max-width: $breakpoint-mobile) {
+      display: block;
+      width: 100%;
+      margin: 1rem;
     }
   }
   img {
