more work on menu

--- a/scss/site.scss
+++ b/scss/site.scss
@@ -1,8 +1,8 @@
 @use "variables" as *;
 
-* {
-  outline: 1px solid cyan;
-}
+// * {
+//   outline: 1px solid cyan;
+// }
 
 html,
 body {
@@ -64,15 +64,34 @@ header#top {
   @media (max-width: $breakpoint-tablet) {
     flex-wrap: wrap-reverse;
     justify-content: center;
+    padding-bottom: 0;
+  }
+  @media (max-width: $breakpoint-mobile) {
+    &.menu-open {
+      button svg {
+        &:first-child {
+          display: inline;
+        }
+        &:last-child {
+          display: none;
+        }
+      }
+      nav {
+        display: block;
+      }
+    }
   }
   nav {
     margin: 1rem;
     width: 100%;
     display: flex;
     justify-content: space-between;
+    @media (max-width: $breakpoint-tablet) {
+      margin: 0 1rem;
+    }
     @media (max-width: $breakpoint-mobile) {
       display: none;
-      &.display-block {
+      &.menu-open {
         display: block;
       }
     }
@@ -83,15 +102,26 @@ header#top {
       text-decoration: none;
       @media (max-width: $breakpoint-mobile) {
         display: block;
+        text-align: center;
       }
     }
   }
   button {
+    background: none;
+    border: 0;
     display: none;
+    padding: 0;
     @media (max-width: $breakpoint-mobile) {
       display: block;
       width: 100%;
-      margin: 1rem;
+    }
+    svg {
+      width: 1rem;
+      height: auto;
+      fill: #bebebe;
+      &:first-child {
+        display: none;
+      }
     }
   }
   img {
