--- a/scss/index.scss
+++ b/scss/index.scss
@@ -7,10 +7,11 @@ section {
 }
 
 section#hero {
-  flex: 1 0 50%;
-  text-align: center;
-  justify-content: space-around;
   align-items: center;
+  flex: 1 0 50%;
+  justify-content: space-around;
+  margin: 0;
+  text-align: center;
   > div {
     margin: 3rem 0;
     &:last-child {
@@ -32,14 +33,8 @@ section#hero {
   }
 }
 
-section.above-fold > article {
-  flex: 1 1 230px;
-}
-section.below-fold > article {
-  flex: 1 1 286px;
-}
-
 article {
+  flex: 1 1 250px;
   padding-right: 1rem;
   margin: 1rem 0;
 }
