--- a/scss/site.scss
+++ b/scss/site.scss
@@ -15,7 +15,7 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: "Bangers", cursive;
+  font-family: "Bangers";
   letter-spacing: 1px;
   margin-bottom: 15px;
 }
