remove menu transition

--- a/css/site.css
+++ b/css/site.css
@@ -83,23 +83,15 @@ header#top button {
 @media (max-width: 500px) {
   header#top {
     padding: 0;
-    background: none;
-  }
-  header#top nav,
-header#top button {
-    margin: -1px 0;
   }
   header#top > a {
-    background: #fff;
-    background: rgba(255, 255, 255, 0.95);
     flex: 0 0 100%;
     padding: 0.5rem 0;
     text-align: center;
     z-index: 1;
   }
   header#top button {
-    background: #dedede;
-    background: rgba(222, 222, 222, 0.95);
+    background: #dedede42;
     border: 0;
     padding: 0;
     z-index: 1;
@@ -114,20 +106,6 @@ header#top button {
   header#top button svg:first-child {
     display: none;
   }
-  header#top nav {
-    background: #fff;
-    opacity: 0;
-    transform: translateY(-100%);
-    transition: 0.25s ease-out;
-    visibility: hidden;
-    z-index: 0;
-  }
-  header#top.menu-open > a {
-    background: #fff;
-  }
-  header#top.menu-open button {
-    background: #dedede;
-  }
   header#top.menu-open button svg:first-child {
     display: inline;
   }
@@ -135,9 +113,7 @@ header#top button {
     display: none;
   }
   header#top.menu-open nav {
-    opacity: 1;
-    transform: translateY(0);
-    visibility: visible;
+    display: block;
   }
 }
 header#top nav {
@@ -153,13 +129,13 @@ header#top nav {
 }
 @media (max-width: 500px) {
   header#top nav {
-    display: block;
+    display: none;
   }
 }
 header#top nav a {
-  padding: 1rem 0.5rem;
-  font-size: 0.9em;
   color: #555;
+  font-size: 0.9em;
+  padding: 1rem 0.5rem;
   text-decoration: none;
 }
 @media (max-width: 500px) {
@@ -172,6 +148,11 @@ header#top nav a {
 header#top nav a:first-child {
   border-top: none;
   padding-left: 0;
+}
+@media (max-width: 500px) {
+  header#top nav a:first-child {
+    padding-left: 0.5rem;
+  }
 }
 @media (max-width: 800px) {
   header#top nav a:last-child {
