--- a/scss/index.scss
+++ b/scss/index.scss
@@ -13,7 +13,7 @@ section#hero {
   margin: 0;
   text-align: center;
   > div {
-    margin: 3rem 0;
+    margin: 0 0 1rem;
     &:last-child {
       @media (max-width: $breakpoint-tablet) {
         display: none;
