--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@ section#hero {
   text-align: center;
 }
 section#hero > div {
-  margin: 3rem 0;
+  margin: 0 0 1rem;
 }
 @media (max-width: 800px) {
   section#hero > div:last-child {
